{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 62,
  "lineage": "5b0452bb-7495-3f5d-c422-7e74e8defe4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f2f7c4e34b870b4",
            "association_id": "eipassoc-040f134eab9e5c9dc",
            "domain": "vpc",
            "id": "eipalloc-04f2f7c4e34b870b4",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-08feeb1b6e422d0bb",
            "private_dns": "ip-10-0-3-176.eu-west-1.compute.internal",
            "private_ip": "10.0.3.176",
            "public_dns": "ec2-54-72-172-234.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.172.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dab0800aa38826f2",
            "arn": "arn:aws:ec2:eu-west-1:831936863969:instance/i-0acb53d3b6c9bbf76",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acb53d3b6c9bbf76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02cca40520cf1906e",
            "private_dns": "ip-10-0-1-246.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-52-48-31-220.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.31.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c19bf247e7e54ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02705e1b578bf72aa",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069feee70806d50e0"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ava_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:internet-gateway/igw-035b98ed9d0e401a5",
            "id": "igw-035b98ed9d0e401a5",
            "owner_id": "831936863969",
            "tags": {
              "Name": "AvaliabiltyIGW"
            },
            "tags_all": {
              "Name": "AvaliabiltyIGW"
            },
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:loadbalancer/app/internalelb/8c74d851fca92fd5",
            "arn_suffix": "app/internalelb/8c74d851fca92fd5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-internalelb-1343950327.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:loadbalancer/app/internalelb/8c74d851fca92fd5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internalelb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0377ae7ccc7613e8f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bcfd0af9e2cb5933"
              },
              {
                "subnet_id": "subnet-0d1cf1e353eecd3b2"
              }
            ],
            "subnets": [
              "subnet-0bcfd0af9e2cb5933",
              "subnet-0d1cf1e353eecd3b2"
            ],
            "vpc_id": "vpc-04ef483bd9e2c4179",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.internal_elb_sg",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internet_facing_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:loadbalancer/app/internet-facing-elb/ea1d0c56aa5cd6ab",
            "arn_suffix": "app/internet-facing-elb/ea1d0c56aa5cd6ab",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internet-facing-elb-407173085.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:loadbalancer/app/internet-facing-elb/ea1d0c56aa5cd6ab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internet-facing-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cf5b3645656b2658"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02705e1b578bf72aa"
              },
              {
                "subnet_id": "subnet-0bb666b398b741a76"
              }
            ],
            "subnets": [
              "subnet-02705e1b578bf72aa",
              "subnet-0bb666b398b741a76"
            ],
            "vpc_id": "vpc-04ef483bd9e2c4179",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:targetgroup/internal-target-group/ceecb8035128446d",
            "arn_suffix": "targetgroup/internal-target-group/ceecb8035128446d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/internal-health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:targetgroup/internal-target-group/ceecb8035128446d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internet_facing_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:targetgroup/internet-facing-target-group/216cc1d66f5d437e",
            "arn_suffix": "targetgroup/internet-facing-target-group/216cc1d66f5d437e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:831936863969:targetgroup/internet-facing-target-group/216cc1d66f5d437e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internet-facing-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f2f7c4e34b870b4",
            "association_id": "eipassoc-040f134eab9e5c9dc",
            "connectivity_type": "public",
            "id": "nat-001b3b3dd3720d0da",
            "network_interface_id": "eni-08feeb1b6e422d0bb",
            "private_ip": "10.0.3.176",
            "public_ip": "54.72.172.234",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1cf1e353eecd3b2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.private-subnet-1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1b9fbeab8f00d322926603699",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-001b3b3dd3720d0da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1b9fbeab8f00d32",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ava_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private-subnet-1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-035b98ed9d0e401a5",
            "id": "r-rtb-0f2ed65470189a76e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2ed65470189a76e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_route_table.public_subnet_rt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:route-table/rtb-0b1b9fbeab8f00d32",
            "id": "rtb-0b1b9fbeab8f00d32",
            "owner_id": "831936863969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-035b98ed9d0e401a5",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "AvaliailityPrivateRT"
            },
            "tags_all": {
              "Name": "AvaliailityPrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:route-table/rtb-0f2ed65470189a76e",
            "id": "rtb-0f2ed65470189a76e",
            "owner_id": "831936863969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035b98ed9d0e401a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AvaliabiltyPublicRT"
            },
            "tags_all": {
              "Name": "AvaliabiltyPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfc79225cfa1b624",
            "route_table_id": "rtb-0b1b9fbeab8f00d32",
            "subnet_id": "subnet-0d1cf1e353eecd3b2"
          },
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private-subnet-1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff4d26b817e502e",
            "route_table_id": "rtb-0f2ed65470189a76e",
            "subnet_id": "subnet-02705e1b578bf72aa"
          },
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public-subnet-1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0559b3ad5ed3014d7",
            "route_table_id": "rtb-0b1b9fbeab8f00d32",
            "subnet_id": "subnet-0bcfd0af9e2cb5933"
          },
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private-subnet-2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0947fab1e7a314722",
            "route_table_id": "rtb-0f2ed65470189a76e",
            "subnet_id": "subnet-0bb666b398b741a76"
          },
          "dependencies": [
            "aws_internet_gateway.ava_igw",
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public-subnet-2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:security-group/sg-069feee70806d50e0",
            "description": "Security group for Bastion Host",
            "egress": [],
            "id": "sg-069feee70806d50e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-security-group",
            "name_prefix": "",
            "owner_id": "831936863969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:security-group/sg-0cf5b3645656b2658",
            "description": "Security group for ELBs",
            "egress": [],
            "id": "sg-0cf5b3645656b2658",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-security-group",
            "name_prefix": "",
            "owner_id": "831936863969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:security-group/sg-0377ae7ccc7613e8f",
            "description": "Security group for internal ELB",
            "egress": [],
            "id": "sg-0377ae7ccc7613e8f",
            "ingress": [],
            "name": "internal-elb-security-group",
            "name_prefix": "",
            "owner_id": "831936863969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:subnet/subnet-0d1cf1e353eecd3b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1cf1e353eecd3b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831936863969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AvaliabilityPrivateSubnet1"
            },
            "tags_all": {
              "Name": "AvaliabilityPrivateSubnet1"
            },
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:subnet/subnet-0bcfd0af9e2cb5933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcfd0af9e2cb5933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831936863969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AvaliabilityPrivateSubnet2"
            },
            "tags_all": {
              "Name": "AvaliabilityPrivateSubnet2"
            },
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:subnet/subnet-02705e1b578bf72aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02705e1b578bf72aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831936863969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AvaliabilityPublicSubnet1"
            },
            "tags_all": {
              "Name": "AvaliabilityPublicSubnet1"
            },
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:subnet/subnet-0bb666b398b741a76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb666b398b741a76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831936863969",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AvaliabilityPublicSubnet2"
            },
            "tags_all": {
              "Name": "AvaliabilityPublicSubnet2"
            },
            "vpc_id": "vpc-04ef483bd9e2c4179"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831936863969:vpc/vpc-04ef483bd9e2c4179",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e2b070e404fec72",
            "default_route_table_id": "rtb-084134e9cdd60e861",
            "default_security_group_id": "sg-020cc7edd0c201e56",
            "dhcp_options_id": "dopt-008c40d9ec6da10d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ef483bd9e2c4179",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084134e9cdd60e861",
            "owner_id": "831936863969",
            "tags": {
              "name": "AvaliabiltyVPC"
            },
            "tags_all": {
              "name": "AvaliabiltyVPC"
            }
          }
        }
      ]
    }
  ]
}